# CHEEcalc

./: CMakeLists.txt  README.md
include/: core.h  transfer.h
src/: main.cpp  transfer.cpp
